add new book and remove book functionalities

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
       <nav class="menu">
         <ul class="options">
           <li><a href="index.html">BOOKS IN STORE</a></li>
-          <li><a href="new_book.html">NEW BOOK</a></li>
+          <li><a class="new" href="#new">NEW BOOK</a></li>
         </ul>
       </nav>
       <h1>Books in store</h1>
-      <div class="jumbotron">
+      <div class="container form">
         <ul id="store"></ul>
-        <form action="new.html">
-          <center><button class="btn btn-primary">New Book</button></center>
-        </form>
       </div>
+      <div class="container">
+        <div id="new"></div>
+      </div>
+
       <footer>
         <p class="rights">Author: Julian Belmonte</p>
       </footer>
