--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
       </div>
       <nav class="menu">
         <ul class="options">
-          <li><a href="index.html">BOOKS IN STORE</a></li>
-          <li><a class="new" href="#new">NEW BOOK</a></li>
+          <li><a class="new" href="#new">ADD NEW BOOK</a></li>
         </ul>
       </nav>
       <h1>Books in store</h1>
