--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       </footer>
     </div>
 
-    <script src="library.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/events.js"></script>
+    <script src="js/library.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css" />
   </body>
 </html>
