checkboxes improved and added scroll animation

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <body>
     <div class="container">
       <div class="banner">
-        <img src="images/library-banner.jpg" alt="banner" />
+        <img src="images/library-banner.jpg" alt="banner" id="banner" />
       </div>
       <nav class="menu">
         <ul class="options">
-          <li><a class="new" href="#new">ADD NEW BOOK</a></li>
+          <li>
+            <a class="new" href="#add-new-book">ADD NEW BOOK</a>
+          </li>
         </ul>
       </nav>
       <h1>Books in store</h1>
@@ -18,7 +20,7 @@
         <ul id="store"></ul>
       </div>
       <div class="container">
-        <div id="new"></div>
+        <div id="add-new-book"></div>
       </div>
 
       <footer>
