DOM and Logic separated

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </footer>
     </div>
 
+    <script src="js/dom.js"></script>
     <script src="js/library.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css" />
   </body>
